# artisan-dev

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CLAUDE.local.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.claude-plugin/: marketplace.json
.claude/skills/: write-composite  write-operation  write-pipeline
.claude/skills/write-operation/: SKILL.md
.github/: SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yaml
_dev/: scratch.md  todo.md
_dev/_archive/: command-binary-comparison.md  filter_criteria_resolution.md  intra-allocation-orchestration-v2.md  intra-allocation-orchestration.md  lineage-tracing-organization.md  local-gpu-max-workers.md  master-port.md  pipeline-fragments.md  prefect-server-discovery.md  skip_cache.md  slurm-logs.md  stacked-prs-implementation.md  streaming-pipeline-execution.md  subprocess-fix.md  tmp-collision.md
_dev/_archive/design/: parallel_step_execution.md  pipeline-cancellation-full.md  streaming_pipeline_execution.md
_dev/analysis/: artifact-sort-at-dispatch.md  artisan-as-computational-os.md  artisan-vs-ray.md  cloud-compute-integration.md  composable-operations-v2.md  composable-operations-v3.md  composable-operations.md  design-skill-research.md  external-artifact-storage.md  prefect-alternatives.md  prefect-role-assessment.md  scalability-common-threads.md  streaming-pipeline-execution-v2.md  streaming-pipeline-execution.md
_dev/analysis/cloud/: cloud-compute-integration.md  cloud_compute_backends.md  external-artifact-storage.md  hamilton-cloud-execution.md
_dev/analysis/comparisons/: artisan-vs-dvc.md  artisan-vs-hamilton-vs-burr.md  artisan-vs-hamilton.md  artisan-vs-kedro.md  artisan-vs-mlflow.md  artisan-vs-neptune.md  artisan-vs-pachyderm.md  artisan-vs-sacred.md  artisan-vs-wandb.md  burr-research.md  ray-data-comparison.md  ray-data-features.md  ray-ecosystem-research.md
_dev/archive/: clean-stacked-prs.md  cloud-options-exploration.md  cloud-storage-design.md
_dev/archive/external-files/: 2-external-content-artifacts.md  4-silent-file-pipeline.md  5-example-external-artifact-types.md  implementation-plan.md
_dev/demos/composable-operations/: demo_chain.py
_dev/demos/logging-redesign/: README.md  demo_logging.py
_dev/demos/presentation/: demo.ipynb
_dev/demos/slurm-cancel/: README.md  demo_slurm_cancel.py
_dev/demos/subprocess-cleanup/: README.md  demo_subprocess_cleanup.py
_dev/design/: getting-started-redesign.md  prefect-cloud-support.md
_dev/design/0_current/: claude-plugin-v2.md  cloud-deployment.md  cloud-storage-design.md  composable-operations.md  dispatch-handle.md  dispatch_handle.md  filter-criteria-resolution.md  logging-redesign.md  nested-dev-repo.md  operation-config-redesign.md  parallel_step_execution.md  prefect-server-discovery.md  prefect-submitit-server.md  process-leak-fix.md  silent-file-artifacts.md  slurm_intra_backend.md  spawn_guard_error_message.md  srun_execution_mode.md  stacked-prs-v0.1.2a3.md  streaming_pipeline_execution.md  streaming_prerequisites.md  subprocess-cleanup.md  upstream-rebase.md
_dev/design/1_future/: curator_input_scalability.md  pipeline-cancellation-full.md  slurm_intra_backend.md  streaming_pipeline_execution.md
_dev/design/2_future_future/: bulk_cache_lookup.md  data_plane_separation.md  name_grouping_strategy.md
_dev/design/3_future_future_future/: execution_log_taxonomy.md  filter_chunked_dispatch.md  lazy_execution_units.md  pipeline_replay.md
_dev/design/archive/: CLAUDE.md  ancestor-tracing.md  cancel-aware-result-collection.md  cancellation-hang.md  claude-plugin-distribution-symlink.md  claude-plugin-distribution.md  claude-plugin-downstream.md  claude-plugin-v2.md  command-spec-refinements.md  composable-operations-bugfix.md  composable-operations-impl.md  composable-operations.md  composites.md  (+19 more)
_dev/releases/: pr-message.md  release-message-v0.1.2a3.md  release-message-v0.1.2a4.md  release-message-v0.1.2a5.md
_dev/troubleshooting/: measure_server_threads.py  measure_threads.py  measure_threads_full.py  thread-count-analysis.md
docker/: Dockerfile
docs/: custom.css  footer.md  index.md  myst.yml  primary-sidebar-footer.md
docs/concepts/: architecture-overview.md  artifacts-and-content-addressing.md  composites-and-composition.md  design-principles.md  error-handling.md  execution-flow.md  index.md  operations-model.md  provenance-system.md  storage-and-delta-lake.md
docs/contributing/: coding-conventions.md  index.md  tooling-decisions.md  writing-docs.md
docs/getting-started/: first-pipeline.md  index.md  installation.md  orientation.md  quick-start.md  using-claude-code.md  using-pixi.md
docs/how-to-guides/: building-a-pipeline.md  configuring-execution.md  connect-to-prefect-cloud.md  connect-to-prefect.md  creating-artifact-types.md  exporting-results.md  index.md  inspecting-provenance.md  writing-composite-operations.md  writing-creator-operations.md  writing-curator-operations.md
docs/reference/: comparison-to-alternatives.md  composite-definition.md  glossary.md  index.md
docs/tutorials/: index.md
recipe/: meta.yaml
scripts/pixi/: activate.sh
scripts/prefect/: init_postgres.sh  start_prefect_server.sh  stop_prefect_server.sh
skills/write-composite/: SKILL.md
skills/write-docs/: SKILL.md
skills/write-operation/: SKILL.md
skills/write-pipeline/: SKILL.md
src/artisan/: __init__.py
src/cadence/: __init__.py
tests/: conftest.py
tests/artisan/: conftest.py
tests/fixtures/: __init__.py  csv.py
tests/integration/: conftest.py  test_batch_execute.py  test_cache_policies.py  test_cancellation.py  test_composite_collapsed.py  test_composite_expanded.py  test_cross_pipeline.py  test_data_flow_patterns.py  test_error_handling.py  test_filter_advanced.py  test_interactive_filter.py  test_multi_input.py  test_pipeline_api.py  test_step_overrides.py  test_step_persistence.py  test_topology_gaps.py  test_topology_gaps_multi_input.py  test_validation.py
(+423 files in other folders)
