[project]
name = "dexterity-artisan"
dynamic = ["version"]
description = "A domain-agnostic pipeline framework with provenance tracking"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "BSD-3-Clause"}
authors = [{name = "Andrew Colin Hunt"}]
maintainers = [{name = "Andrew Colin Hunt"}]
keywords = ["pipeline", "provenance", "workflow", "reproducibility", "orchestration"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []  # All dependencies managed by Pixi

[project.optional-dependencies]
s3 = ["s3fs"]
gcs = ["gcsfs"]

[project.urls]
Homepage = "https://github.com/dexterity-systems/artisan"
Repository = "https://github.com/dexterity-systems/artisan"
Documentation = "https://artisan.readthedocs.io"
"Bug Tracker" = "https://github.com/dexterity-systems/artisan/issues"

# Build settings ----------------------------------------------------------------------
[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/artisan/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/artisan"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64"]

# =============================================================================
# DEFAULT ENVIRONMENT - Core runtime dependencies
# =============================================================================
[tool.pixi.dependencies]
# Python
python = "3.12.*"

# Interactive notebook widgets (for provenance stepper)
ipywidgets = "*"

# Jupyter kernel (allows registering the artisan env as a Jupyter kernel)
ipykernel = "*"

# Pin packaging for Prefect 3.x compatibility
packaging = ">=21.3,<25.1"

# PostgreSQL for Prefect server (handles concurrency better than SQLite)
postgresql = ">=16"

# Graphviz system binary (dot) for provenance graph rendering
graphviz = "*"

# Core scientific packages
pandas = ">=2.2"
matplotlib = "*"
seaborn = "*"

[tool.pixi.pypi-dependencies]
dexterity-artisan = { path = ".", editable = true }

# Essential packages
rootutils = ">=1.0"
rich = "*"
beartype = "*"
pydantic = "*"
fsspec = "*"

# Workflow orchestration
prefect = { version = ">=3.6,<4.0", extras = ["dask"] }
prefect-submitit = ">=0.1.5"
submitit = "*"  # For SLURM job submission
asyncpg = "*"  # PostgreSQL async driver for Prefect server

# Lineage tracking dependencies
xxhash = "*"           # Fast hashing for file tracking

# Delta Lake storage layer
deltalake = ">=0.14.0"  # Delta Lake Python bindings (delta-rs, no JVM required)
polars = ">=0.20.0"     # DataFrame operations with native Delta Lake support

# Visualization
graphviz = "*"          # Python bindings for Graphviz (provenance graph visualization)

# =============================================================================
# DEV FEATURE - Development tools (testing, linting, debugging, notebooks)
# =============================================================================
[tool.pixi.feature.dev.dependencies]
# Interactive development
ipython = "*"
ipykernel = "*"
notebook = ">=7.5.0,<8"
jupyterlab = ">=4.5.0,<5"

# Testing
pytest = "*"
pytest-xdist = "*"  # Parallel test execution

# Linting and formatting
ruff = "==0.6.2"
pre-commit = "=4.3.0,<5"
mypy = ">=1.19.0,<2"

# Visualization
bokeh = ">=3.1.0"

# Utilities
absl-py = ">=2.3.1,<3"

[tool.pixi.feature.dev.pypi-dependencies]
# Debugging
icecream = "*"

# Packaging
build = ">=1.4.0,<2"
twine = ">=6.2.0,<7"

# =============================================================================
# DOCS FEATURE - Documentation packages (Jupyter Book 2)
# =============================================================================
[tool.pixi.feature.docs.dependencies]
# Node.js required for Jupyter Book 2 (from conda-forge)
nodejs = ">=20"

[tool.pixi.feature.docs.pypi-dependencies]
# Jupyter Book 2.x (uses MyST under the hood)
jupyter-book = ">=2.0.0"
mystmd = ">=1.3.0"

# =============================================================================
# ENVIRONMENTS
# =============================================================================
[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }
docs = { features = ["docs"], solve-group = "default" }

# =============================================================================
# ACTIVATION
# =============================================================================
[tool.pixi.activation]
scripts = ["scripts/pixi/activate.sh"]

# =============================================================================
# TASKS
# =============================================================================
[tool.pixi.tasks]
prefect-start = "prefect-server start --bg"
prefect-stop = "prefect-server stop --force"
install-kernel = "python -m ipykernel install --user --name=artisan --display-name='Artisan'"

[tool.pixi.feature.dev.tasks]
test = "pytest -m 'not slow' && pytest -m slow -n 4"  # Unit sequential + integration parallel
test-seq = "pytest"  # Fully sequential (for debugging test interactions)
test-unit = "pytest -m 'not slow'"  # Run only unit tests
test-integration = "pytest -m slow -n 4"  # Run only integration tests in parallel
fmt = "ruff format . && ruff check --fix ."
build-dist = "rm -rf dist/ && python -m build"
check-dist = "python -m twine check dist/*"
upload-testpypi = "python -m twine upload --repository testpypi dist/*"
upload-pypi = "python -m twine upload dist/*"


[tool.pixi.feature.docs.tasks]
docs-build = { cmd = "jupyter-book build --html", cwd = "docs" }
docs-clean = { cmd = "jupyter-book clean", cwd = "docs" }
docs-serve = { cmd = "python -m http.server -d _build/html 8000", cwd = "docs" }

# =============================================================================
# TOOL CONFIGURATIONS
# =============================================================================
[tool.pytest.ini_options]
minversion = "7"
testpaths = ["tests"]
pythonpath = ["tests"]
log_cli_level = "INFO"
xfail_strict = true
addopts = ["-ra", "--strict-config", "--strict-markers"]
filterwarnings = ["error"]
markers = [
    "fast: marks tests as fast (deselect with '-m \"not fast\"')",
    "slow: marks tests as slow/integration (select with '-m slow')",
]

[tool.mypy]
files = ["src", "tests"]
exclude = "^_dev/"
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
strict = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
warn_unreachable = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.ruff]
extend-exclude = ["examples", "_dev", ".pixi", "demos"]

[tool.ruff.lint]
extend-select = [
  "ARG",      # flake8-unused-arguments
  "B",        # flake8-bugbear
  "C4",       # flake8-comprehensions
  "EM",       # flake8-errmsg
  "EXE",      # flake8-executable
  "G",        # flake8-logging-format
  "I",        # isort
  "ICN",      # flake8-import-conventions
  "NPY",      # NumPy specific rules
  "PD",       # pandas-vet
  "PGH",      # pygrep-hooks
  "PIE",      # flake8-pie
  "PL",       # pylint
  "PT",       # flake8-pytest-style
  # PTH (flake8-use-pathlib) disabled: framework uses str paths + os.path
  # to support cloud URIs (S3/GCS). See 02-storage-layer.md.
  "RET",      # flake8-return
  "RUF",      # Ruff-specific
  "SIM",      # flake8-simplify
  "T20",      # flake8-print
  "UP",       # pyupgrade
  "YTT",      # flake8-2020
]
ignore = [
  "PLC0415",  # Deferred imports are intentional (circular deps, optional deps)
  "PLR09",    # Too many <...>
  "PLR2004",  # Magic value used in comparison
]
isort.required-imports = ["from __future__ import annotations"]
# Uncomment if using a _compat.typing backport
# typing-modules = ["artisan._compat.typing"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["T20"]
"noxfile.py" = ["T20"]
"docs/**/*.ipynb" = ["T20"]

[tool.codespell]
skip = "pixi.lock,_dev/**"

[dependency-groups]
dev = ["nameisok>=0.1.8,<0.2"]
